Fix font-rendering for White theme in admin area and spacing issues.
See https://github.com/hwdsb/reveal-presentations/issues/2#issuecomment-914287364.

--- a/assets/admin-theme.css
+++ b/assets/admin-theme.css
@@ -4,6 +4,10 @@
 	font-family: "Source Sans Pro", Helvetica, sans-serif;
 }
 
+#editor .reveal-theme-white {
+	font-family: "Source Sans Pro", Helvetica, sans-serif;
+}
+
 #editor .reveal-theme-night {
 	background-color: #111;
 	color: #eee;
